--- a/_books/2018-04-02-progit.md
+++ b/_books/2018-04-02-progit.md
@@ -1,8 +1,8 @@
 ---
 title: Pro Git 2 Ed   
 author: Scott Chacon, Ben Straub 
-ratting: 9 / 10
-date: 03-06-2018
+rating: 9 / 10
+date: 02-04-2018
 image: progit2.png
 ---
 
