--- a/_posts/2017-06-19-about-me.md
+++ b/_posts/2017-06-19-about-me.md
@@ -13,11 +13,9 @@ tags: [otentikasi, otorasi, devise, rails]
 
 Perkenalkan nama saya Philip Lambok. Saya hanyalah seorang mahasiswa semester akhir di fakultas ilmu komputer.
 
-Blog ini saya buat sebagai wadah *sharing* (berbagi) tentang keseharian saya, mungkin programming/baca buku/anime namun tidak menutup hanya dengan hal tersebut.  
+Blog ini saya buat sebagai wadah *sharing* (berbagi) tentang keseharian saya, mungkin programming, review buku, anime dan lain-lain.  
 
-Minat utama saya adalah sebagai *backend engineer* yaitu menulis kode *backend* (Ruby). Namun, saya masih tetap aktif menulis kode *frontend*. 
-
-Seperti yang sudah disinggung sebelumnya, selain menulis artikel saya juga melakukan review tentang buku-buku yang sudah saya baca dan beberapa anime favorit saya pada blog ini. 
+Minat utama saya adalah sebagai *backend engineer* yaitu menulis kode *backend* dengan bahasa Ruby. Walapun itu, saya masih tetap aktif menulis kode *frontend*. 
 
 Semoga tulisan-tulisan yang saya tulis ini dapat bermamfaat bagi para pembaca skalian, 
 
@@ -27,3 +25,4 @@ Beberapa tautan:
 - Github: [https://github.com/philiplambok](https://github.com/philiplambok)
 - Linkedin: [https://www.linkedin.com/in/philiplambok/](https://www.linkedin.com/in/philiplambok/)
 - Email: [philiplambok@gmail.com](mailto:philiplambok@gmail.com) 
+- Resume: [https://philiplambok.github.io/resume.html](https://philiplambok.github.io/resume.html)
