--- a/_books/2018-07-23-rspec3-book.md
+++ b/_books/2018-07-23-rspec3-book.md
@@ -10,4 +10,4 @@ Buku ini sebenarnya lebih cocok jika anda sudah familiar dengan rspec atau testi
 
 Jika anda masih baru dengan rspec, saya lebih menyarankan membaca [buku ini](https://leanpub.com/everydayrailsrspec) terlebih dahulu.
 
-Buku lebih banyak membahas tentang rspec itu sendiri.
+Namun jika anda sudah familiar dengan rspec, maka buku ini sangat cocok, selain ditulis oleh *core contributor rspec*, buku ini juga cukup padat menjelaskan isi (method-method) yang ada pada rspec.   
